2010-09-29  Richard Guenther  <rguenther@suse.de>

	* tree.h (SCOPE_FILE_SCOPE_P): New macro.
	(DECL_FILE_SCOPE_P): Use it.
	(TYPE_FILE_SCOPE_P): New macro.

2010-09-29  Nicola Pero  <nicola.pero@meta-innovation.com>

	* c-parser.c (c_lex_one_token): In Objective-C, when dealing with
	a CPP_NAME which is a reserved word, clearly separate cases for
	OBJC_IS_PQ_KEYWORD, OBJC_IS_AT_KEYWORD and OBJC_IS_CXX_KEYWORD.

2010-09-29  Nicola Pero  <nicola.pero@meta-innovation.com>

	* c-parser.c (c_lex_one_token): In Objective-C, do not replace
	token->value with the canonical spelling.  Do exactly like C and
	C++ and leave it as it is.

2010-09-28  Richard Henderson  <rth@redhat.com>

	* config/alpha/alpha.c (alpha_builtins): New.
	(alpha_builtin_decl, TARGET_BUILTIN_DECL): New.
	(alpha_builtin_function): New.
	(alpha_add_builtins, alpha_init_builtins): Use it.

2010-09-28  Nicola Pero  <nicola.pero@meta-innovation.com>

	* doc/standards.texi (Standards): Expanded the section on
	Objective-C and Objective-C++.

2010-09-28  DJ Delorie  <dj@redhat.com>

	PR target/45800
	* config/m32c/m32c.c (m32c_subreg): Force adjustment of subregs of
	volatile MEMs.

2010-09-28  Iain Sandoe  <iains@gcc.gnu.org>

	* c-parser.c (c_parser_declaration_or_fndef): Diagnose incorrect prefix
	attributes on methods.
	 (c_parser_objc_method_definition): Handle attributes.
	(c_parser_objc_methodproto): Likewise.
	(c_parser_objc_maybe_method_attributes): New.
	(c_parser_objc_method_decl): Handle attributes, add a diagnostic for a
	missing definition, similar to that in ObjC++.

2010-09-28  Richard Henderson  <rth@redhat.com>

	* defaults.h (DWARF2_UNWIND_INFO): Don't depend on TARGET_UNWIND_INFO.
	(MUST_USE_SJLJ_EXCEPTIONS): Remove.
	(CONFIG_SJLJ_EXCEPTIONS): Remove.
	(STACK_OLD_CHECK_PROTECT): Use targetm.except_unwind_info.
	(STACK_CHECK_PROTECT): Likewise.
	* dwarf2out.c (DWARF2_UNWIND_INFO, DWARF2_FRAME_INFO): Poison.
	(dwarf2out_do_frame): Use debug_unwind_info and except_unwind_info.